--- a/src/javascripts/components/studentCard/studentCard.scss
+++ b/src/javascripts/components/studentCard/studentCard.scss
@@ -15,36 +15,33 @@
       width: 100%; 
     }
   }
+
+  h2 {
+    @include default-font(20px);
+  }
 }
 
-.student-gryffindor {
+@mixin house-styles($housecolor) {
   @extend %student-card;
 
   h2 {
-    color: $gryffindor;
+    color: $housecolor;
   }
+}
+
+
+.student-gryffindor {
+  @include house-styles($gryffindor);
 }
 
 .student-ravenclaw {
-  @extend %student-card;
-
-  h2 {
-    color: $ravenclaw;
-  }
+  @include house-styles($ravenclaw);
 }
 
 .student-hufflepuff {
-  @extend %student-card;
-
-  h2 {
-    color: $hufflepuff;
-  }
+  @include house-styles($hufflepuff);
 }
 
 .student-slytherin {
-  @extend %student-card;
-
-  h2 {
-    color: $slytherin;
-  }
+  @include house-styles($slytherin);
 }
